<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            style="@style/titulo"
            android:text="@string/user_loggin"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            style="@style/usucon"
            android:id="@+id/text_user_label"
            android:layout_marginTop="@dimen/top_border"
            android:text="@string/user"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"

            />


        <EditText
            style="@style/texto"
            android:id="@+id/editTextTextPersonName"
            android:layout_marginTop="@dimen/text_height"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:padding="20dp"


            />

        <TextView
            style="@style/usucon"
            android:id="@+id/text_password_label"
            android:layout_marginTop="@dimen/top_border_password"
            android:text="@string/password"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"


            />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/texto"
            android:layout_marginTop="@dimen/top_border_password_text"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:padding="20dp"
            android:drawablePadding="15dp"

            />


        <Button
            style="@style/boton"
            android:id="@+id/button_Loggin"
            android:backgroundTint="@color/white"
            android:text="@string/loggin"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toTopOf="parent"


            />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>